local-k8s/identityservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: identityservice
spec:
  type: ClusterIP
  selector:
    app: identityservice
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: identityservice
  labels:
    app: identityservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identityservice
  template:
    metadata:
      name: identityservice
      labels:
        app: identityservice
    spec:
      containers:
        - name: identityservice
          image: identityservice
          imagePullPolicy: Never
          ports:
            - containerPort: 80
