local-k8s/userservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: userservice
spec:
  type: ClusterIP
  selector:
    app: userservice
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice
  labels:
    app: userservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userservice
  template:
    metadata:
      name: userservice
      labels:
        app: userservice
    spec:
      containers:
        - name: userservice
          image: userservice
          imagePullPolicy: Never
          ports:
            - containerPort: 80
