local-k8s/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: userservice
      port:
        number: 8080
  rules:
    - http: # Any host name
        paths:
          - path: /identity-service
            pathType: Prefix
            backend:
              service:
                name: identityservice
                port:
                  number: 8080
          - path: /
            pathType: Prefix #Exact
            backend:
              service:
                name: apigateway
                port:
                  number: 8080
